<resources>
    <string name="app_name">YomieView</string>
    <string name="player_id">Player Id:</string>
    <string name="dummy_x">XXXXX</string>
    <string name="claim_id">Claim Id</string>
    <string name="claimId">Claim Id: %1s</string>
    <string name="playerId">Player Id: %1s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="actions">Actions</string>
    <string name="close_app">Close App</string>
    <string name="remove_player">Remove Player</string>
    <string name="app_version">App version %1s</string>
    <string name="progress">%1d/%1d</string>
    <string name="restart_app">Restart App</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="downloading_playlist">Downloading your playlist</string>
    <string name="sync_icon">sync icon</string>
    <string name="no_valid_data">There is no slide to show at this moment</string>
    <string name="update_images">Updating weather, website and rss slide images</string>
    <string name="preparing_files">We are preparing your files</string>
    <string name="syncing">Syncing</string>
    <string name="all_set">All set</string>
    <string name="checking_files">Checking your playlist</string>
    <string name="something_wrong">Some thing went wrong</string>
    <string name="no_internet">Oops, Device is not connected to internet</string>
    <string name="date_incorrect">Your box date is not correct</string>
</resources>