<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actions"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/bsClose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="20dp"
            android:text="@string/close_app"
            android:textColor="@color/white"
            app:drawableStartCompat="@drawable/ic_exit" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/bsRemove"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/bsRemovePB"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:drawablePadding="20dp"
                android:text="@string/remove_player"
                android:textColor="@color/white"
                app:drawableStartCompat="@drawable/ic_remove" />

            <ProgressBar
                android:id="@+id/bsRemovePB"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:visibility="gone" />
        </RelativeLayout>

        <TextView
            android:id="@+id/bsAppVer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="20dp"
            android:text="@string/app_version"
            android:textColor="@color/white"
            app:drawableStartCompat="@drawable/ic_hammer" />

        <TextView
            android:id="@+id/bsPlayerId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="20dp"
            android:text="@string/playerId"
            android:textColor="@color/white"
            app:drawableStartCompat="@drawable/ic_box" />

        <TextView
            android:id="@+id/bsRestart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="20dp"
            android:text="@string/restart_app"
            android:textColor="@color/white"
            app:drawableStartCompat="@drawable/ic_restart" />

        <TextView
            android:id="@+id/bsCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="20dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            app:drawableStartCompat="@drawable/ic_cross" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>