<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".RegistrationActivity">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/icon"
        app:layout_constraintBottom_toTopOf="@id/idsLL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/idsLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="300dp"
            android:background="@drawable/rounded_white_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_id"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/registerPlayerId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="60"
                android:text="@string/dummy_x"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/registerPlayerIdCopyBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_copy" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="300dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_white_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/claim_id"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/registerClaimId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="60"
                android:text="@string/dummy_x"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/registerClaimIdCopyBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_copy" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/registerMsgLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/registerMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="registering new device"
            android:textColor="@color/white" />

        <ProgressBar
            android:id="@+id/registerPb"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>